# homestead_ai

./: .gitignore  Pipfile  README.md  fw.py  hh_context.json  hh_context.md  pyproject.toml
.github/workflows/: homestead-app.yml
api/: context.py
homestead/: context.py  homestead.py
models/: entry.py  secret.py  token.py
services/: open_ai.py
tests/: conftest.py
tests/api/: test_assistant.py
tests/unit/: test_context.py  test_context_knowledge.py
