[tool.poetry]
name = "homestead-ai-training"
version = "0.1.0"
description = "Knowledge base for Homestead AI"
authors = ["David Herrera <david.herrera83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyleniumio = "^1.20.0"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
